; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_common.c_b53_phylink_mac_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_common.c_b53_phylink_mac_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsa_switch = type { %struct.b53_device* }
%struct.b53_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.b53_device*, i32, i32, %struct.phylink_link_state*)* }
%struct.phylink_link_state = type { i64, i32, i32, i32 }

@MLO_AN_PHY = common dso_local global i32 0, align 4
@MLO_AN_FIXED = common dso_local global i32 0, align 4
@PHY_INTERFACE_MODE_SGMII = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @b53_phylink_mac_config(%struct.dsa_switch* %0, i32 %1, i32 %2, %struct.phylink_link_state* %3) #0 {
  %5 = alloca %struct.dsa_switch*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.phylink_link_state*, align 8
  %9 = alloca %struct.b53_device*, align 8
  store %struct.dsa_switch* %0, %struct.dsa_switch** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.phylink_link_state* %3, %struct.phylink_link_state** %8, align 8
  %10 = load %struct.dsa_switch*, %struct.dsa_switch** %5, align 8
  %11 = getelementptr inbounds %struct.dsa_switch, %struct.dsa_switch* %10, i32 0, i32 0
  %12 = load %struct.b53_device*, %struct.b53_device** %11, align 8
  store %struct.b53_device* %12, %struct.b53_device** %9, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @MLO_AN_PHY, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %4
  br label %64

17:                                               ; preds = %4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @MLO_AN_FIXED, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %34

21:                                               ; preds = %17
  %22 = load %struct.b53_device*, %struct.b53_device** %9, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load %struct.phylink_link_state*, %struct.phylink_link_state** %8, align 8
  %25 = getelementptr inbounds %struct.phylink_link_state, %struct.phylink_link_state* %24, i32 0, i32 3
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.phylink_link_state*, %struct.phylink_link_state** %8, align 8
  %28 = getelementptr inbounds %struct.phylink_link_state, %struct.phylink_link_state* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.phylink_link_state*, %struct.phylink_link_state** %8, align 8
  %31 = getelementptr inbounds %struct.phylink_link_state, %struct.phylink_link_state* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @b53_force_port_config(%struct.b53_device* %22, i32 %23, i32 %26, i32 %29, i32 %32)
  br label %64

34:                                               ; preds = %17
  %35 = load %struct.phylink_link_state*, %struct.phylink_link_state** %8, align 8
  %36 = getelementptr inbounds %struct.phylink_link_state, %struct.phylink_link_state* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = call i64 @phy_interface_mode_is_8023z(i64 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %46, label %40

40:                                               ; preds = %34
  %41 = load %struct.phylink_link_state*, %struct.phylink_link_state** %8, align 8
  %42 = getelementptr inbounds %struct.phylink_link_state, %struct.phylink_link_state* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = load i64, i64* @PHY_INTERFACE_MODE_SGMII, align 8
  %45 = icmp eq i64 %43, %44
  br i1 %45, label %46, label %64

46:                                               ; preds = %40, %34
  %47 = load %struct.b53_device*, %struct.b53_device** %9, align 8
  %48 = getelementptr inbounds %struct.b53_device, %struct.b53_device* %47, i32 0, i32 0
  %49 = load %struct.TYPE_2__*, %struct.TYPE_2__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 0
  %51 = load i32 (%struct.b53_device*, i32, i32, %struct.phylink_link_state*)*, i32 (%struct.b53_device*, i32, i32, %struct.phylink_link_state*)** %50, align 8
  %52 = icmp ne i32 (%struct.b53_device*, i32, i32, %struct.phylink_link_state*)* %51, null
  br i1 %52, label %53, label %64

53:                                               ; preds = %46
  %54 = load %struct.b53_device*, %struct.b53_device** %9, align 8
  %55 = getelementptr inbounds %struct.b53_device, %struct.b53_device* %54, i32 0, i32 0
  %56 = load %struct.TYPE_2__*, %struct.TYPE_2__** %55, align 8
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 0
  %58 = load i32 (%struct.b53_device*, i32, i32, %struct.phylink_link_state*)*, i32 (%struct.b53_device*, i32, i32, %struct.phylink_link_state*)** %57, align 8
  %59 = load %struct.b53_device*, %struct.b53_device** %9, align 8
  %60 = load i32, i32* %6, align 4
  %61 = load i32, i32* %7, align 4
  %62 = load %struct.phylink_link_state*, %struct.phylink_link_state** %8, align 8
  %63 = call i32 %58(%struct.b53_device* %59, i32 %60, i32 %61, %struct.phylink_link_state* %62)
  br label %64

64:                                               ; preds = %16, %21, %53, %46, %40
  ret void
}

declare dso_local i32 @b53_force_port_config(%struct.b53_device*, i32, i32, i32, i32) #1

declare dso_local i64 @phy_interface_mode_is_8023z(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
